# error-translator

./: .coverage  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  builder.py  index.html  llms.txt  main.py  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  scraped_errors_database.json  scraper.py  setup_ext.py  typo.py
.github/: FUNDING.yml  release-template.md
.github/workflows/: ci.yml  docs.yml
ARCHITECTURE/: index.html
CONTRIBUTING/: index.html
data/: rules.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  examples.md  index.md  llms.txt  robots.txt
error_translator/: cli.py  core.py  rules.json  rules.py  server.py
error_translator.egg-info/: PKG-INFO  SOURCES.txt
error_translator/static/: index.html
error_translator_cli_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/: index.html
scripts/: builder.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/ARCHITECTURE/: index.html
site/examples/: index.html
site/search/: search_index.json
src/error_translator/: auto.py  cli.py  core.py
src/error_translator/api/: server.py
src/error_translator/api/static/: index.html  style.css
src/error_translator/ast/: ast_engine.py  ast_handlers.py
src/error_translator/ext/: fast_matcher.c
tests/: conftest.py  test_ast.py  test_core.py
