[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "error-translator-cli-v2"
version = "1.1.3"
description = "A CLI tool that explains Python errors in simple human language."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Gourabananda Datta", email = "gourabanandadatta@zohomail.com" }
]
[project.urls]
"Homepage" = "https://github.com/gourabanandad/error-translator"
"Source" = "https://github.com/gourabanandad/error-translator"
"Contributors" = "https://github.com/gourabanandad/error-translator/graphs/contributors"
[project.scripts]
explain-error = "error_translator.cli:main"

# --- NEW LINES BELOW ---
[tool.setuptools]
packages = ["error_translator"]