[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "error-translator-cli-v2"
version = "1.1.5"
description = "A CLI tool that explains Python errors in simple human language."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Gourabananda Datta", email = "gourabanandadatta@zohomail.in" }
]
keywords = [
    "python", "traceback", "cli", "debugging", "error handling", 
    "developer tools", "exception", "stack-trace", "terminal", 
    "human-readable", "bug-tracker"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/gourabanandad/error-translator"
"Source" = "https://github.com/gourabanandad/error-translator"
"Documentation" = "https://github.com/gourabanandad/error-translator/tree/master/docs"
"Issues" = "https://github.com/gourabanandad/error-translator/issues"
"Changelog" = "https://github.com/gourabanandad/error-translator/releases"
"Contributors" = "https://github.com/gourabanandad/error-translator/graphs/contributors"

[project.scripts]
explain-error = "error_translator.cli:main"

[project.optional-dependencies]
server = ["fastapi>=0.110", "pydantic>=2.6", "uvicorn>=0.29"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.7", "pymdown-extensions>=10.0"]
dev = ["pytest>=8.0", "build>=1.2", "twine>=5.0"]

[tool.setuptools]
packages = ["error_translator"]

[tool.setuptools.package-data]
error_translator = ["rules.json", "static/*.html", "static/*.css"]